[gd_scene load_steps=8 format=3 uid="uid://d04tvwyids61o"]

[ext_resource type="Script" path="res://scripts/exploration.gd" id="1_0fxv7"]
[ext_resource type="Script" path="res://scripts/paul_uc.gd" id="1_tv0qa"]
[ext_resource type="Texture2D" uid="uid://d36e4ded8mncu" path="res://resources/Exploration/map_v1.png" id="2_stnxy"]
[ext_resource type="SpriteFrames" uid="uid://b83qg8hvnqv0p" path="res://scenes/paul_anim_frames.tres" id="5_msodk"]
[ext_resource type="Texture2D" uid="uid://hjq6l5ljmgd3" path="res://resources/Interaction/vecteezy_free-download-ripped-transparent-paper-texture_47464377.png" id="6_8xhyb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpiat"]
size = Vector2(125, 191)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xe05j"]
texture = ExtResource("6_8xhyb")

[node name="ExplorationTest" type="Node2D"]
script = ExtResource("1_0fxv7")

[node name="map" type="Sprite2D" parent="."]
position = Vector2(-53, 1144)
scale = Vector2(4, 4)
texture = ExtResource("2_stnxy")

[node name="collisions" type="StaticBody2D" parent="map"]

[node name="outer_walls" type="CollisionPolygon2D" parent="map/collisions"]
position = Vector2(4.25, 3.75)
build_mode = 1
polygon = PackedVector2Array(279, -242.25, 237.75, -281, 79, -280, 40.25, -242.25, -281, -240.5, -281.75, 360, 279, 359)

[node name="wall1" type="CollisionPolygon2D" parent="map/collisions"]
build_mode = 1
polygon = PackedVector2Array(38.5, 79, 38.5, 159, 39.25, 116.75, 276.5, 119.5, 38.5, 117.75)

[node name="wall2" type="CollisionPolygon2D" parent="map/collisions"]
build_mode = 1
polygon = PackedVector2Array(38.5, 202.75, 39.25, 280, 19.25, 279.25, 19.25, 339.75, -21.25, 339.75, -22, 279.25, -41.25, 280.75, -40.5, 199.25, -40.5, 359, 40.25, 359)

[node name="wall3" type="CollisionPolygon2D" parent="map/collisions"]
build_mode = 1
polygon = PackedVector2Array(40.25, -160.75, 39.25, 37.75, 41, -2.5, 278.25, 0, 40.25, -1.75)

[node name="wall4" type="CollisionPolygon2D" parent="map/collisions"]
build_mode = 1
polygon = PackedVector2Array(-41.25, 157.25, -39.75, -158, -40.5, 148.75)

[node name="wall5" type="CollisionPolygon2D" parent="map/collisions"]
build_mode = 1
polygon = PackedVector2Array(-40.25, -201.5, -40.25, -240.75, -40.25, -209.75)

[node name="wall6" type="CollisionPolygon2D" parent="map/collisions"]
build_mode = 1
polygon = PackedVector2Array(40, -202.5, 39.5, -240.75, 39.5, -211)

[node name="Paul_UC" type="CharacterBody2D" parent="."]
position = Vector2(526, 508)
rotation = 3.14159
script = ExtResource("1_tv0qa")

[node name="Collider" type="CollisionShape2D" parent="Paul_UC"]
position = Vector2(0, 40)
shape = SubResource("RectangleShape2D_cpiat")

[node name="cameraTransform" type="RemoteTransform2D" parent="Paul_UC"]
rotation = 3.14159

[node name="PushTimer" type="Timer" parent="Paul_UC"]
process_callback = 0
one_shot = true

[node name="SpriteHandlerRight" type="AnimatedSprite2D" parent="Paul_UC"]
position = Vector2(-34, 40)
scale = Vector2(0.07, 0.07)
sprite_frames = ExtResource("5_msodk")
animation = &"push"

[node name="SpriteHandlerLeft" type="AnimatedSprite2D" parent="Paul_UC"]
position = Vector2(33.9999, 40.0001)
scale = Vector2(0.07, 0.07)
sprite_frames = ExtResource("5_msodk")
animation = &"push"
flip_h = true

[node name="TimeLimit" type="Timer" parent="."]
wait_time = 300.0
one_shot = true
autostart = true

[node name="ui" type="CanvasLayer" parent="."]

[node name="DEBUG_label" type="Label" parent="ui"]
offset_left = 5.0
offset_top = 5.0
offset_right = 6.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="ui_timer" type="PanelContainer" parent="ui"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_xe05j")

[node name="TimeLeft" type="Label" parent="ui/ui_timer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Paul_UC/PushTimer" to="Paul_UC" method="wheelchair_push"]
